--- a/SBM AYUR/Base.lproj/Main.storyboard
+++ b/SBM AYUR/Base.lproj/Main.storyboard
@@ -415,6 +415,151 @@
             </objects>
             <point key="canvasLocation" x="4816.8000000000002" y="-727.28635682158927"/>
         </scene>
+        <!--Search View Controller-->
+        <scene sceneID="5V7-Wg-yRx">
+            <objects>
+                <viewController storyboardIdentifier="searchView" id="H1a-Z9-pTG" customClass="SearchViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wg1-nb-sW8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b9M-uh-So8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <color key="backgroundColor" red="0.25293129679999998" green="0.5894055963" blue="0.85818189379999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="xRy-xF-Y7q"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Nr4-BF-C9g">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UMN-9H-Yq6">
+                                        <rect key="frame" x="0.0" y="1" width="74" height="43"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="74" id="WGV-O8-xd4"/>
+                                        </constraints>
+                                        <state key="normal" image="back-arrow-icon.png"/>
+                                        <connections>
+                                            <action selector="menu_ButtonClick:" destination="H1a-Z9-pTG" eventType="touchUpInside" id="L4f-rw-sTC"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCA-f0-wFj">
+                                        <rect key="frame" x="93" y="13" width="56" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20.5" id="qZN-V9-6ar"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.25293129679999998" green="0.5894055963" blue="0.85818189379999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LCA-f0-wFj" secondAttribute="trailing" constant="20" symbolic="YES" id="2O1-UG-Zt5"/>
+                                    <constraint firstItem="LCA-f0-wFj" firstAttribute="centerY" secondItem="UMN-9H-Yq6" secondAttribute="centerY" id="CCb-aI-zge"/>
+                                    <constraint firstAttribute="height" constant="44" id="N74-lx-4UG"/>
+                                    <constraint firstAttribute="bottom" secondItem="UMN-9H-Yq6" secondAttribute="bottom" id="Xsq-LA-3EK"/>
+                                    <constraint firstItem="UMN-9H-Yq6" firstAttribute="top" secondItem="Nr4-BF-C9g" secondAttribute="top" constant="1" id="gsE-Y8-tXo"/>
+                                    <constraint firstItem="UMN-9H-Yq6" firstAttribute="leading" secondItem="Nr4-BF-C9g" secondAttribute="leading" constant="1" id="kXW-yN-u2H"/>
+                                    <constraint firstItem="LCA-f0-wFj" firstAttribute="leading" secondItem="UMN-9H-Yq6" secondAttribute="trailing" constant="18" id="sz2-wW-WCn"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="117" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g6K-Ms-qBJ">
+                                <rect key="frame" x="0.0" y="125" width="375" height="542"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="memorycell" rowHeight="117" id="aqj-6k-voc">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="117"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aqj-6k-voc" id="Suz-mA-C6H">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="117"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLs-xa-tdU">
+                                                    <rect key="frame" x="15" y="39" width="212" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="Yz7-Rq-cTq"/>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="212" id="leC-BA-9up"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3kt-00-iti" userLabel="blackbg_image">
+                                                    <rect key="frame" x="250" y="4" width="117" height="109"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="109" id="pTI-ma-Xcg"/>
+                                                        <constraint firstAttribute="width" constant="117" id="zdf-Xe-JVs"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pbi-kC-pcf">
+                                                    <rect key="frame" x="250" y="4" width="117" height="109"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="117" id="UfR-su-Cf6"/>
+                                                        <constraint firstAttribute="height" constant="109" id="km4-Hx-IWb"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLP-Hh-rtE">
+                                                    <rect key="frame" x="15" y="9" width="37" height="38"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="38" id="WFi-no-x9T"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="lLs-xa-tdU" firstAttribute="leading" secondItem="Suz-mA-C6H" secondAttribute="leadingMargin" id="3G4-vr-WJB"/>
+                                                <constraint firstAttribute="topMargin" secondItem="xLP-Hh-rtE" secondAttribute="top" constant="2" id="C1q-ma-nBO"/>
+                                                <constraint firstAttribute="bottom" secondItem="pbi-kC-pcf" secondAttribute="bottom" constant="4" id="PdN-Ia-BFa"/>
+                                                <constraint firstAttribute="trailing" secondItem="3kt-00-iti" secondAttribute="trailing" constant="8" id="SLq-ON-SyR"/>
+                                                <constraint firstItem="xLP-Hh-rtE" firstAttribute="leading" secondItem="Suz-mA-C6H" secondAttribute="leading" constant="15" id="Zog-4K-c3e"/>
+                                                <constraint firstItem="lLs-xa-tdU" firstAttribute="top" secondItem="Suz-mA-C6H" secondAttribute="topMargin" constant="28" id="afe-YX-WUB"/>
+                                                <constraint firstAttribute="bottom" secondItem="3kt-00-iti" secondAttribute="bottom" constant="4" id="eOe-eE-C0z"/>
+                                                <constraint firstAttribute="trailing" secondItem="pbi-kC-pcf" secondAttribute="trailing" constant="8" id="lEg-gA-kSB"/>
+                                                <constraint firstItem="pbi-kC-pcf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xLP-Hh-rtE" secondAttribute="trailing" constant="8" symbolic="YES" id="ozG-jG-bWw"/>
+                                                <constraint firstItem="3kt-00-iti" firstAttribute="leading" secondItem="lLs-xa-tdU" secondAttribute="trailing" constant="23" id="ygB-3c-UTC"/>
+                                                <constraint firstItem="3kt-00-iti" firstAttribute="top" secondItem="Suz-mA-C6H" secondAttribute="top" constant="4" id="zx9-VR-FWp"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="zug-px-rVT">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="g6K-Ms-qBJ" firstAttribute="leading" secondItem="26A-8m-1kr" secondAttribute="leading" id="8Pb-oA-QhF"/>
+                            <constraint firstItem="b9M-uh-So8" firstAttribute="leading" secondItem="Wg1-nb-sW8" secondAttribute="leading" id="Bfz-k8-Msm"/>
+                            <constraint firstItem="Nr4-BF-C9g" firstAttribute="top" secondItem="26A-8m-1kr" secondAttribute="top" id="Ce1-oe-rUw"/>
+                            <constraint firstAttribute="trailing" secondItem="b9M-uh-So8" secondAttribute="trailing" id="Gph-e5-gut"/>
+                            <constraint firstItem="b9M-uh-So8" firstAttribute="top" secondItem="Wg1-nb-sW8" secondAttribute="top" id="HTz-e2-6lF"/>
+                            <constraint firstItem="Nr4-BF-C9g" firstAttribute="leading" secondItem="26A-8m-1kr" secondAttribute="leading" id="JJr-Cn-Wy6"/>
+                            <constraint firstItem="26A-8m-1kr" firstAttribute="trailing" secondItem="Nr4-BF-C9g" secondAttribute="trailing" id="Kdj-52-241"/>
+                            <constraint firstItem="zug-px-rVT" firstAttribute="leading" secondItem="26A-8m-1kr" secondAttribute="leading" id="QtD-uM-AYQ"/>
+                            <constraint firstItem="g6K-Ms-qBJ" firstAttribute="top" secondItem="Nr4-BF-C9g" secondAttribute="bottom" constant="61" id="S17-3q-v6c"/>
+                            <constraint firstItem="26A-8m-1kr" firstAttribute="bottom" secondItem="g6K-Ms-qBJ" secondAttribute="bottom" id="T28-xc-1yu"/>
+                            <constraint firstItem="26A-8m-1kr" firstAttribute="trailing" secondItem="g6K-Ms-qBJ" secondAttribute="trailing" id="cIg-3Y-Jx1"/>
+                            <constraint firstItem="zug-px-rVT" firstAttribute="top" secondItem="b9M-uh-So8" secondAttribute="bottom" id="dA5-r7-hK8"/>
+                            <constraint firstItem="g6K-Ms-qBJ" firstAttribute="top" secondItem="zug-px-rVT" secondAttribute="bottom" constant="5" id="gvY-L7-1Ew"/>
+                            <constraint firstItem="zug-px-rVT" firstAttribute="trailing" secondItem="26A-8m-1kr" secondAttribute="trailing" id="yB6-gF-b52"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="26A-8m-1kr"/>
+                    </view>
+                    <connections>
+                        <outlet property="memoriesTableview" destination="g6K-Ms-qBJ" id="NUc-EN-7vR"/>
+                        <outlet property="searchBar" destination="zug-px-rVT" id="SlO-eO-h5t"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wof-6J-Bkc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6997.6000000000004" y="-761.46926536731644"/>
+        </scene>
     </scenes>
     <resources>
         <image name="back-arrow-icon.png" width="30" height="30"/>
